# bagstip-contracts

./: .gitignore  Anchor.toml  Cargo.toml  README.md  TASKLIST.md  rust-toolchain.toml
docs/: CONTRACT_DECISIONS_v1.md  MVP_ARCHITECTURE.md  PR4_GITHUB_REVIEW_COMMENTS.md  V1_VETTING.md
programs/tipvault/: Cargo.toml
programs/tipvault/src/: lib.rs
