[package]
name = "bagstip-tipvault"
version = "0.1.0"
description = "BagsTip TipVault escrow (MVP)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bagstip_tipvault"

[lints.rust]
unexpected_cfgs = "allow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"